# Deeploy

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .yapfignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DumpOTypes.py  INSTALL.md  LICENSE  Makefile  README.md  __init__.py  onnxLayers.py  onnxParse.py  parserTypes.py  pyproject.toml  quantlib_trial.onnx  setup.cfg  setup.py
.gitlab/merge_request_templates/: MRTemplate.md
Deeploy/: AbstractDataTypes.py  DeeployTypes.py  MemoryLevels.py  __init__.py
Deeploy/Bindings/: .style.yapf  AutoFutureBinding.py  BasicBindings.py  CMSISBindings.py  FutureBinding.py  MemPoolBindings.py  PULPBindings.py  __init__.py
Deeploy/CodeTransformationPasses/: Closure.py  Future.py  IntrospectiveCodeTransformation.py  MemoryAllocation.py  PrintInputs.py  TilingCodeGeneration.py  TilingVariableReplacement.py  __init__.py
Deeploy/CodeTransformationPasses/PULPCodeTransformationPasses/: AutoTransposeUtils.py  PULPClusterSynch.py  PULPClusterTiling.py  PULPClusterTilingDB.py  PULPL3Tiling.py  PULPL3TilingDB.py  __init__.py
Deeploy/DataTypes/: BasicDataTypes.py  CMSISDataTypes.py  Future.py  PULPDataTypes.py
Deeploy/Layers/: BasicLayers.py  CMSISLayers.py  MemPoolLayers.py  PULPLayers.py
Deeploy/NetworkDeployers/: CMSISDeployer.py  GenericDeployer.py  MemPoolDeployer.py  MemoryLevelDeployer.py  PULPDeployer.py  SignPropDeployer.py  __init__.py
Deeploy/OptimizationPasses/: BasicPasses.py  CMSISPasses.py  DebugPasses.py  LoweringOptimizationPasses.py  Matchers.py  MemPoolPasses.py  MemoryLevelAnnotationPasses.py  PassClasses.py  __init__.py
Deeploy/OptimizationPasses/BindingsOptimizationPasses/: AutoTranspose.py  BindingsOptimization.py  PassClasses.py  bindingUtils.py
Deeploy/OptimizationPasses/TopologyOptimizationPasses/: BasicPasses.py  CMSISPasses.py  DebugPasses.py  LoweringOptimizationPasses.py  MemPoolPasses.py  PULPPasses.py
Deeploy/Parsers/: BasicParsers.py  CMSISParsers.py  GenericParsers.py  MemPoolParsers.py  PULPParsers.py  __init__.py
Deeploy/Templates/BasicTemplates/: AddTemplate.py  AllocateTemplate.py  ClosureTemplate.py  ConvTemplate.py  DWConvTemplate.py  DebugPrintTemplate.py  DebugTemplate.py  DummyTemplate.py  GatherTemplate.py  GemmTemplate.py  ITAMaxTemplate.py  IntegerDivTemplate.py  MatMulTemplate.py  MaxPoolTemplate.py  MulTemplate.py  PadTemplate.py  RQIntegerDivTemplate.py  RQSiGELUTemplate.py  ReduceMeanTemplate.py  ReduceSumTemplate.py  RequantShiftTemplate.py  ReshapeTemplate.py  SliceTemplate.py  TransposeTemplate.py  __init__.py  iGELUTemplate.py  iLayernormTemplate.py  iSoftmaxTemplate.py
Deeploy/Templates/CMSISTemplates/: CLCATemplate.py  CMSISUtils.py  ConvTemplate.py  DWConvTemplate.py  GEMMTemplate.py  LinearAttentionTemplate.py  MHSATemplate.py  MaxPool2DTemplate.py
Deeploy/Templates/MemPoolTemplates/: AllocateTemplate.py  ConvTemplate.py  DWConvTemplate.py  GemmTemplate.py  ITAMaxTemplate.py  MHSATemplate.py  MatMulTemplate.py  MaxPoolTemplate.py  RQGemmTemplate.py  RQMatMulTemplate.py  RequantShiftTemplate.py  __init__.py
Deeploy/Templates/PULPTemplates/: AllocateTemplate.py  ConvTemplate.py  FreeTemplate.py  GEMMTemplate.py  MaxPool2DTemplate.py  RQAddTemplate.py  ReduceMeanTemplate.py  RequantShiftTemplate.py  SliceTemplate.py  TransposeTemplate.py  iSoftmaxTemplate.py
Deeploy/Tiling/: MemoryConstraintFlows.py  MemoryConstraints.py  MemoryScheduler.py  TileConstraintFlow.py  TilerExtension.py  TilerModel.py  TilingCodegen.py  __init__.py
Deeploy/Tiling/BasicTileConstraintFlow/: AddTileConstraintFlow.py  NOPTileConstraintFlow.py  TransposeTileConstraintFlow.py  UntiledTileConstraintFlow.py  __init__.py
Deeploy/Tiling/PULPTileConstraintFlow/: ConvTileConstraintFlow.py  DWConvTileConstraintFlow.py  GEMMTileConstraintFlow.py  MatMulTileConstraintFlow.py  MaxPoolTileConstraintFlow.py  RequantShiftTileConstraintFlow.py  __init__.py  iSoftmaxTileConstraintFlow.py
Deeploy/Tiling/PlatformTilers/: BasicTiler.py  PULPTiler.py
Deeploy/TypeCheckers/: BasicCheckers.py  CMSISCheckers.py  MemPoolCheckers.py  PULPCheckers.py  PULPDMACheckers.py  SignPropTypeChecker.py
DeeployTest/Tests/Adder/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/Attention/: activations.npz  inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/EEGFormer/: activations.npz  inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/Hardswish/: network.onnx  outputs.npz
DeeployTest/Tests/ICCT/: activations.npz  inputs.npz  network.onnx  outputs.npz
DumpO/: DumpOManglers.py  DumpOTypes.py  NetworkDeployer.py  __init__.py
DumpO/Bindings/: .style.yapf  BasicBindings.py  CMSISBindings.py  __init__.py
DumpO/DataTypes/: BasicDataTypes.py
DumpO/DumpO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DumpO/Layers/: BasicLayers.py  CMSISLayers.py  __init__.py
DumpO/NetworkDeployers/: CMSISDeployer.py  __init__.py
DumpO/OptimizationPasses/: BasicPasses.py  CMSISPasses.py  ConvRequantMergePass.py  LoweringOptimizationPasses.py  PassClasses.py  __init__.py
DumpO/Parsers/: BasicParsers.py  CMSISParsers.py
DumpO/Templates/: __init__.py
DumpO/TypeCheckers/: BasicCheckers.py  CMSISCheckers.py
Layers/: BasicLayers.py
Parsers/: BasicParsers.py
Templates/: __init__.py
Templates/BasicTemplates/: ConvTemplate.py  DummyTemplate.py  FreeTemplate.py  GEMMTemplate.py  GatherTemplate.py  SkipTemplate.py
TypeCheckers/: BasicCheckers.py  __init__.py
cmake/: Util.cmake  common.cmake
cmake/generic/: toolchain_llvm.cmake
cmake/mempool/: mempool.cmake  mempool.yaml  mempool_ita.cmake  minpool.cmake  simulation.cmake  toolchain_gcc.cmake  toolchain_llvm.cmake
cmake/pulp/: toolchain_gcc.cmake  toolchain_llvm.cmake
scripts/: run_clang_format.py
templates/: AddTemplate.py  AllocateTemplate.py  DummyTemplate.py  FreeTemplate.py  GEMMTemplate.py  GatherTemplate.py  MHSATemplate.py  RequantShiftTemplate.py  ReshapeTemplate.py  SkipTemplate.py  __init__.py  iGELUTemplate.py
toolchain/: banshee.patch  llvm.patch  meson-build-script-riscv.txt
(+258 files in other folders)
