[build-system]
requires = [
"setuptools>=42",
"wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "Deeploy"
description = "Deeploy - Bring your networks to your platforms"
version = '0.1.0'
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
'protobuf==4.23.3',
'numpy',
'onnx==1.14.0',
'mako',
'IPython',
'argparse',
'pylink-square',
'pyserial',
'clang-format',
'toml',
'dill',
'pytest',
'yapf==0.33.0',
'isort==5.12.0',
"ortools",
"onnx-graphsurgeon @ https://developer.download.nvidia.com/compute/redist/onnx-graphsurgeon/onnx_graphsurgeon-0.3.20-py2.py3-none-any.whl"
]
[tool.setuptools]
packages = ['Deeploy']