[metadata]
name=DumpO
version=0.0.1
author=Moritz Scherer
author_email=scheremo@iis.ee.ethz.ch
description=DumpO - Bring you networks to your platform
[options]
setup_requires =
    nvidia-pyindex
install_requires =
    onnx          
    mako
    numpy
    IPython
    onnx-graphsurgeon
    argparse